Adjust diffy theme to fix ChangeScreen2 overlap
The diffy theme was causing the overlap observed with the top of
ChangeScreen2 sitting on the bottom of the menu.  Adjust the position
of Diffy slightly to fix this.

--- a/contrib/themes/diffy/etc/GerritSite.css
+++ b/contrib/themes/diffy/etc/GerritSite.css
@@ -15,15 +15,15 @@
 #gerrit_topmenu {
   left: 60px;
   margin-right: 60px;
-  padding-right: 10px;
   position: relative;
+  margin-bottom: 5px;
 }
 
 #diffy_logo {
   display: block !important;
   margin-bottom: -55px;
-  padding-left: 20px;
+  padding-left: 10px;
   position: relative;
-  top: -45px;
+  top: -55px;
   width: 60px;
 }
